--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches: [main]
 
+permissions:
+  contents: write # This is required for actions/deploy-pages to deploy to GitHub Pages
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -21,9 +24,14 @@ jobs:
 
       - name: Build
         run: npm run build
+        
+      - name: Create .nojekyll file
+        run: touch dist/.nojekyll
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: dist
           branch: gh-pages
+          token: ${{ secrets.GITHUB_TOKEN }}
+          clean: true
