--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "element-plus": "^2.9.10",
+    "gtag": "^1.0.1",
     "tsparticles": "^2.9.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1",
