--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "gtag": "^1.0.1",
     "tsparticles": "^2.9.3",
     "vue": "^3.5.13",
+    "vue-draggable-next": "^2.2.1",
     "vue-router": "^4.5.1",
     "vue3-observe-visibility": "^1.0.3",
-    "vue3-particles": "^2.9.3"
+    "vue3-particles": "^2.9.3",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
